--- a/Project/solo_project/ecommerce/templates/logreg.html
+++ b/Project/solo_project/ecommerce/templates/logreg.html
@@ -13,8 +13,8 @@
         <div class="sans-serif relative">
             <div class="w-100 pa2 bg-light-blue shadow-3 h-auto fixed db z-9999">
                 <div class="fl dib">
-                    <img src="static/img/DaoTekLogo.png" class="h2 pa1 v-mid dib mt1">
-                    <img src="static/img/DaoTekWordLogo.png" class="h1 pa1 v-mid dib mt1">
+                    <a href="/"><img src="static/img/DaoTekLogo.png" class="h2 pa1 v-mid dib mt1" alt="DaoTek Graphical Logo, Click to Go Home" title="Click to go home"></a>
+                    <a href="/"><img src="static/img/DaoTekWordLogo.png" class="h1 pa1 v-mid dib mt1" alt="DaoTek Text Logo, Click to Go Home" title="Click to go home"></a>
                 </div>
                 <div class="fr dib">
                     <a class="link grow br3 ph3 pv2 v-mid dib white bg-blue mt2" href="/">Home</a>
@@ -71,8 +71,8 @@
                 </div>
                 {% endif %}
                 <footer class="mt1 db w-100 mid-gray tc">
-                    © 2035 <b class="ttu">DaoTek Ltd</b>., All Rights Reserved
-                    <p>Notice: This website is a portfolio project and is not selling an actual product.</p>
+                    <p class="mb0">© 2035 <b class="ttu">DaoTek Ltd</b>., All Rights Reserved</p>
+                    <p class="mb0">Notice: This website is a portfolio project and is not selling any actual products.</p>
                 </footer>
             </div>
         </div>
